kustomize/hotels/base/soap-rest-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: soap-rest-api
spec:
  selector:
    matchLabels:
      app: soap-rest-api
  template:
    metadata:
      labels:
        app: soap-rest-api
    spec:
      containers:
        - name: app
          image: 381491947495.dkr.ecr.ap-southeast-2.amazonaws.com/soap-rest-api:latest
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /liveness
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /readiness
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 3

---
apiVersion: v1
kind: Service
metadata:
  name: soap-rest-api
spec:
  ports:
    - name: http
      port: 3000
  selector:
    app: soap-rest-api
