kustomize/hotels/base/travel-bff.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travel-bff
spec:
  selector:
    matchLabels:
      app: travel-bff
  template:
    metadata:
      labels:
        app: travel-bff
    spec:
      containers:
        - name: app
          image: 381491947495.dkr.ecr.ap-southeast-2.amazonaws.com/travel-bff:latest
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /liveness
              port: 3001
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /readiness
              port: 3001
            initialDelaySeconds: 3
            periodSeconds: 3

---

apiVersion: v1
kind: Service
metadata:
  name: travel-bff
spec:
  ports:
    - name: http
      port: 3000
  selector:
    app: travel-bff
