kustomize/hotels/base/routes.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hotels
spec:
  host: hotels.yourcluster.example.com
  # path: /search
  to:
    kind: Service
    name: travel-ui
    weight: 100
  # wildcardPolicy: None
  # tls:
  #   # termination: reencrypt
  #   termination: edge
  #   insecureEdgeTerminationPolicy: Redirect
