kustomize/hotels/base/travel-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travel-ui
spec:
  selector:
    matchLabels:
      app: travel-ui
  template:
    metadata:
      labels:
        app: travel-ui
    spec:
      containers:
        - name: app
          image: 381491947495.dkr.ecr.ap-southeast-2.amazonaws.com/travel-ui:latest
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 3

---
apiVersion: v1
kind: Service
metadata:
  name: travel-ui
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: travel-ui

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hotel-ui
spec:
  host: hotel-ui.yourcluster.example.com
  # path: /search
  to:
    kind: Service
    name: travel-ui
    weight: 100
